# MultiAgent

./: .gitignore  environment-dorabot.yml  instruction.txt  observe.json  requirements-dorabot.txt
6000_Dorabot/: .gitignore  README.md  errortext.txt  requirements.txt  setup_new_env.sh
PiPlan/: README.md  pyproject.toml
PiPlan/configs/: expert_collection.yaml  pi05_policy.yaml  sim_default.yaml
PiPlan/piplan/: __init__.py  cli.py  config.py
PiPlan/piplan/control/: actuator.py  safety_supervisor.py
PiPlan/piplan/core/: action.py  agent.py  geometry.py  port.py  state.py  task.py  warehouse.py
PiPlan/piplan/data/: lerobot_writer.py  logger.py  replay_buffer.py  schemas.py
PiPlan/piplan/evaluation/: benchmark.py  metrics.py  rollout.py
PiPlan/piplan/legacy_expert/: dorabot_log_reader.py  dorabot_runner.py  expert_dataset_converter.py  expert_policy_adapter.py
PiPlan/piplan/observation/: global_state_encoder.py  observation_bundle.py  pi05_image_adapter.py  pi05_state_adapter.py  task_prompt_builder.py
PiPlan/piplan/policy/: action_decoder.py  horizon_buffer.py  mock_policy.py  pi05_client.py  pi05_planner.py
PiPlan/piplan/runtime/: events.py  loop.py  physics.py  simulator.py  world.py
PiPlan/piplan/visualization/: pygame_viewer.py  topdown_renderer.py
PiPlan/scripts/: collect_expert_data.py  convert_expert_to_lerobot.py  eval_pi05.py  run_pi05_sim.py  train_pi05.py
PiPlan/tests/: test_action_decoder.py  test_legacy_converter.py  test_observation_schema.py  test_runtime_smoke.py
docs/: reproduce_on_gpu.md
lerobot/: testpi.py  testpi05.py
(+75 files in other folders)
